--- a/login1.html
+++ b/login1.html
@@ -2,7 +2,7 @@
     <head>
         <title>
          Login page
-        </title> 
+        </title><link rel="stylesheet" href="style.css"> 
 
     </head>
     <body>
